# ct-homework

./: README.md
1-sem/algo/: 1A.cpp  1B.cpp  1C.cpp  1D.cpp  2A.cpp  2B.cpp  3A.cpp  3B.cpp  3D.cpp  3E.cpp  4A.cpp  4B.cpp  4C.cpp  5A.cpp  5B.cpp  5C.cpp  5D.cpp  6A.cpp  README.md
1-sem/architecture/OpenMP/: hard.cpp  test.py
1-sem/architecture/RISCV_parser/: main.c
1-sem/architecture/cache/: analitical.cpp  testbench.sv
1-sem/prog-intro/exam/: README.md
2-sem/DM/lab1-automats/: A.cpp  B.cpp  C.cpp  D.cpp  E.cpp  F.cpp  G.cpp  H  H.cpp  problem3.in  problem3.out
2-sem/algo/: 1A.cpp  1B.cpp  1C.cpp  1D.cpp  1E.cpp  1F.cpp  1G.cpp  2A.cpp  2B.cpp  G-test.cpp
2-sem/cpp/asm/: mul.asm  sub.asm
2-sem/cpp/biginteger/: big_integer.cpp  big_integer.h
2-sem/cpp/huffman/: CMakeLists.txt  CMakePresets.json  vcpkg.json
2-sem/cpp/huffman/ci-extra/: build.sh  check-lines.sh  set-upstream.sh  test-valgrind.sh  test.sh
2-sem/cpp/huffman/huffman_lib/: CMakeLists.txt
2-sem/cpp/huffman/huffman_lib/include/: huffman_lib.h
2-sem/cpp/huffman/huffman_lib/lib/: bit_reader.cpp  bit_sequence.cpp  bit_writer.cpp  buffered_istream.cpp  buffered_ostream.cpp  compress.cpp  decompress.cpp  hided_iostream_work.h  huffman_tree.cpp
2-sem/cpp/huffman/integration-tests/: tests.py
2-sem/cpp/huffman/integration-tests/data/: random_bytes  simple.txt
2-sem/cpp/huffman/src/: main.cpp
2-sem/cpp/huffman/unit-tests/: CMakeLists.txt  test_iostream.h  tests.cpp
2-sem/cpp/list-exam/: list.h
2-sem/cpp/set-exam/: set.h
2-sem/cpp/socow-vector/: socow-vector.h
2-sem/cpp/substr/: solution.cpp
2-sem/paradigms/clojure-solutions/: expression.clj
2-sem/paradigms/exam/: hello_world.clj  main.clj
2-sem/paradigms/javascript-solutions/: objectExpression.js
3-sem/DM/lab-1/: A.cpp  B.cpp  C.cpp  D.cpp  E.cpp  F.cpp  G.cpp  H.cpp
3-sem/DM/lab-2/: A.cpp  B.cpp  C.cpp  D.cpp  F.cpp
3-sem/OSHard/alloc/: Makefile  grade  grade-proc  grade-slow  gradelib.py
3-sem/OSHard/cow_pages/: Makefile  compile_flags.txt  grade  grade-lazy  grade-slow  xv6-readme
3-sem/OSHard/networkfs/: entrypoint.c  entrypoint.h  http.h  operations.c  operations.h  requests.c  requests.h
3-sem/algo/lab-1/: A.cpp  B.cpp  C.cpp  D.cpp  E.cpp  F.cpp  G.cpp  H.cpp  I.cpp  J.cpp
3-sem/algo/lab-2/: A.cpp  B.cpp  C.cpp  D.cpp  E.cpp  F.cpp  H.cpp  I.cpp  J.cpp
3-sem/algo/lab-3/: A.cpp  B.cpp  C.cpp  D.cpp  E.cpp  F.cpp  G.cpp  H.cpp  I.cpp  J.cpp  K.cpp  L.cpp  M.cpp
3-sem/mathlog/: A.hs  B.hs  C.hs  D.hs  E.hs  F.hs  Ordinals.hs
4-sem/DM/lab-1/: A.cpp  B.cpp  C.cpp  D.hs
4-sem/PT/lab-1/: 5task.py
4-sem/PT/lab-2/: task3_1.py  task3_2.py  task3_3.py  task4_1.py  task4_2.py
4-sem/metopt/: graph  task1.py  task2.py  task3.py  task4.py  task5.py  task6_1.py  task6_2.py
(+350 files in other folders)
